--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -6,3 +6,4 @@ username=AQA18onlGr4@gmail.com
 password=GitAQA18
 timeout=10
 database=sql7600791
+token=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
