--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -4,6 +4,7 @@ browser=chrome
 headless=false
 username=AQA18onlGr4@gmail.com
 password=GitAQA18
+owner=AQA18onl
 timeout=10
 database=sql7600791
-token=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
+token=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
