--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -6,5 +6,6 @@ username=AQA18onlGr4@gmail.com
 password=GitAQA18
 owner=AQA18onl
 timeout=10
-database=sql7600788
-token=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
+database=public
+#database=sql7600788
+token=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
