--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -3,7 +3,7 @@ apiUrl=https://api.github.com
 browser=chrome
 headless=false
 username=AQA18onlGr4@gmail.com
-password=TC*v2Z0z
+password=EuyHht3Fm
 owner=AQA18onl
 timeout=10
 database=public
