--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -6,7 +6,6 @@ username=AQA18onlGr4@gmail.com
 password=EuyHht3Fm
 owner=AQA18onl
 timeout=10
-database=public
-#database=sql7600788
-token=ghp_QqwPAmM1Ggq0XiUcg
-token2=GSJJIeLdMNhMI3n8HYr
+database=sql7602365
+token=ghp_SkJa1ju4GSGLNi5u
+token2=42n2GsNwcpDFyr0dr6nY
