--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <rest-assured.version>5.3.0</rest-assured.version>
         <mysql-connector-java.version>8.0.28</mysql-connector-java.version>
         <postgresql.version>42.4.0</postgresql.version>
+        <allure-maven.version>2.8</allure-maven.version>
     </properties>
 
     <dependencies>
@@ -107,6 +108,11 @@
                         <groupId>org.aspectj</groupId>
                         <artifactId>aspectjweaver</artifactId>
                         <version>${aspectjweawer.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>io.qameta.allure</groupId>
+                        <artifactId>allure-maven</artifactId>
+                        <version>${allure-maven.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>
