--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -6,6 +6,7 @@ username=AQA18onlGr4@gmail.com
 password=EuyHht3Fm
 owner=AQA18onl
 timeout=10
-database=sql7602365
+#database=sql7602365
+database=public
 token=ghp_SkJa1ju4GSGLNi5u
 token2=42n2GsNwcpDFyr0dr6nY
