--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -3,9 +3,10 @@ apiUrl=https://api.github.com
 browser=chrome
 headless=false
 username=AQA18onlGr4@gmail.com
-password=ke7SgfuUPG
+password=GitAQA18
 owner=AQA18onl
 timeout=10
-database=sql7602365
+#database=sql7602365
+database=public
 token=ghp_SkJa1ju4GSGLNi5u
 token2=42n2GsNwcpDFyr0dr6nY
