--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -3,7 +3,7 @@ apiUrl=https://api.github.com
 browser=chrome
 headless=false
 username=AQA18onlGr4@gmail.com
-password=ke7SgfuUPG
+password=GitAQA18
 owner=AQA18onl
 timeout=10
 database=sql7602365
