--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,13 @@
         <profile>
             <id>username</id>
             <properties>
-                <username>${TEST_PARAM}</username>
+                <username>${userName}</username>
+            </properties>
+        </profile>
+        <profile>
+            <id>password</id>
+            <properties>
+                <password>${password}</password>
             </properties>
         </profile>
     </profiles>
