--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -2,8 +2,8 @@ url=https://github.com
 apiUrl=https://api.github.com
 browser=chrome
 headless=false
-username=${TEST_PARAM}
-password=75vvX75kue
+username=${userName}
+password=${password}
 owner=AQA18onl
 timeout=10
 #database=sql7602365
