--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -2,7 +2,7 @@ url=https://github.com
 apiUrl=https://api.github.com
 browser=chrome
 headless=false
-username=${userName}
+username=AQA18onlGr4@gmail.com
 password=${password}
 owner=AQA18onl
 timeout=10
