--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -2,7 +2,8 @@ url=https://github.com
 apiUrl=https://api.github.com
 browser=chrome
 headless=false
-username=AQA18onlGr4@gmail.com
+#username=AQA18onlGr4@gmail.com
+username=${username}
 password=${password}
 owner=AQA18onl
 timeout=10
