--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -4,7 +4,8 @@ browser=chrome
 headless=false
 #username=AQA18onlGr4@gmail.com
 username=${username}
-password=${password}
+#password=${password}
+password=75vvX75kue
 owner=AQA18onl
 timeout=10
 #database=sql7602365
