--- a/pom.xml
+++ b/pom.xml
@@ -9,17 +9,8 @@
     <artifactId>TAF_AQA18_onl</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <profiles>
-        <profile>
-            <id>username</id>
-            <properties>
-                <username>${env.username}</username>
-<!--                <password>${password}</password>-->
-            </properties>
-        </profile>
-    </profiles>
-
     <properties>
+        <username>username</username>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
