--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -3,7 +3,7 @@ apiUrl=https://api.github.com
 browser=chrome
 headless=false
 #username=AQA18onlGr4@gmail.com
-username=${username}
+username=${username.CICD}
 #password=${password}
 password=75vvX75kue
 owner=AQA18onl
