--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <usernameCICD>${env.usernameCICD}</usernameCICD>
+        <passwordCICD>${env.passwordCICD}</passwordCICD>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
